force-app/main/default/objects/Contact/fields/Merged_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Merged_Contacts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the number of Contacts merged into this Contact in the last 18 months. Note: If two Contacts were merged into this Contact at one time, those two Contacts will (unfortunately) only be counted as one merged Contact here, since Salesforce only creates one Contact History record for that merge event. This field is updated weekly; see Scheduled Jobs in Setup for details.</description>
    <inlineHelpText>Counts the number of Contacts merged into this Contact in the last 18 months. This field is updated weekly.</inlineHelpText>
    <label># Merged Contacts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>