force-app/main/default/objects/Contact/fields/Mixmax_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Mixmax_Emails_Sent__c</fullName>
    <label>Mixmax Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>