force-app/main/default/objects/Contact/fields/Number_of_LF_Activities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_LF_Activities__c</fullName>
    <label>Number of LF Activities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>