force-app/main/default/objects/Contact/fields/Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_Date__c</fullName>
    <label>Opt Out Date</label>
    <type>Date</type>
</CustomField>