force-app/main/default/objects/Contact/fields/Original_Source_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Date__c</fullName>
    <label>Original Source Date</label>
    <type>Date</type>
</CustomField>