force-app/main/default/objects/Contact/fields/Previous_Year_Individual_Training_Spend__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Individual_Training_Spend__c</fullName>
    <description>Previous Year Individual Training Spend - used by Declarative Summary Rollup Tool of same name</description>
    <label>Previous Year Individual Training Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>