force-app/main/default/objects/Contact/fields/Sent_Test__c.field-meta.xml
<CustomField>
    <fullName>Sent_Test__c</fullName>
    <description>Test MC Demo</description>
    <label>Sent - Test</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>