force-app/main/default/objects/Contact/fields/Socioeconomic_Class__c.field-meta.xml
<CustomField>
    <fullName>Socioeconomic_Class__c</fullName>
    <label>Socioeconomic Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working class</fullName>
            </value>
            <value>
                <fullName>Lower middle class</fullName>
            </value>
            <value>
                <fullName>Upper middle class</fullName>
            </value>
            <value>
                <fullName>Upper class</fullName>
            </value>
            <value>
                <fullName>I don&apos;t want to provide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>