force-app/main/default/objects/Contact/fields/Sugar_Modified_at__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Modified_at__c</fullName>
    <label>Sugar Modified at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>