force-app/main/default/objects/Contact/fields/Sugar_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Sugar_Modified_By__c</fullName>
    <label>Sugar Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>