force-app/main/default/objects/Contact/fields/Sugar_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Sugar_OwnerId__c</fullName>
    <label>Sugar OwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>