force-app/main/default/objects/Contact/fields/SugarContactID__c.field-meta.xml
<CustomField>
    <fullName>SugarContactID__c</fullName>
    <externalId>true</externalId>
    <label>Sugar Contact ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>