force-app/main/default/objects/Contact/fields/Suspected_CNCF_Member__c.field-meta.xml
<CustomField>
    <fullName>Suspected_CNCF_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Marketing use</description>
    <label>Suspected CNCF Member</label>
    <type>Checkbox</type>
</CustomField>