force-app/main/default/objects/Contact/fields/Suspected_LF_Member__c.field-meta.xml
<CustomField>
    <fullName>Suspected_LF_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Marketing use</description>
    <label>Suspected LF Member</label>
    <type>Checkbox</type>
</CustomField>