force-app/main/default/objects/Contact/fields/TILBP__TI_Disabled__c.field-meta.xml
<CustomField>
    <fullName>TILBP__TI_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TI Disabled</label>
    <type>Checkbox</type>
</CustomField>