force-app/main/default/objects/Contact/fields/TILBP__TI_LastActiveAt__c.field-meta.xml
<CustomField>
    <fullName>TILBP__TI_LastActiveAt__c</fullName>
    <label>TI Last Active At</label>
    <type>DateTime</type>
</CustomField>