force-app/main/default/objects/Contact/fields/Time_Five_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Five_Minutes__c</fullName>
    <formula>NOW()- 0.03800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Five Minutes</label>
    <type>DateTime</type>
</CustomField>