force-app/main/default/objects/Contact/fields/TravelFund_Blocklist__c.field-meta.xml
<CustomField>
    <fullName>TravelFund_Blocklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TravelFund Blocklist</label>
    <type>Checkbox</type>
</CustomField>