force-app/main/default/objects/Contact/fields/TravelFund_Blocklist_Notes__c.field-meta.xml
<CustomField>
    <fullName>TravelFund_Blocklist_Notes__c</fullName>
    <description>Capture notes around why contact is on blocklist for travel fund request. Will be pulled to TravelFund custom object</description>
    <label>TravelFund Blocklist Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>