force-app/main/default/objects/Contact/fields/Tux_ProgramStartDate__c.field-meta.xml
<CustomField>
    <fullName>Tux_ProgramStartDate__c</fullName>
    <description>This field will store the updated date when the tux rewards points for the contact crossed 500 points.</description>
    <label>Tux ProgramStartDate</label>
    <type>Date</type>
</CustomField>