force-app/main/default/objects/Contact/fields/tux_rewards_first_coupon_gen_date__c.field-meta.xml
<CustomField>
    <fullName>tux_rewards_first_coupon_gen_date__c</fullName>
    <description>Tracks the first time the Tux Rewards Balance hit 500 points.</description>
    <label>First Tux Rewards Coupon Generation</label>
    <type>DateTime</type>
</CustomField>