force-app/main/default/objects/Contact/fields/TuxMember__c.field-meta.xml
<CustomField>
    <fullName>TuxMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has earned a Tux Rewards related coupon within the last three years.</description>
    <label>Active Tux Rewards Member</label>
    <type>Checkbox</type>
</CustomField>