force-app/main/default/objects/Contact/fields/TuxRewards__c.field-meta.xml
<CustomField>
    <fullName>TuxRewards__c</fullName>
    <description>Current Tux Rewards program balance. 1 Point for every USD$1 spent (max. 500 points/purchase). 500 points earns a 50% coupon.</description>
    <label>Tux Rewards Points Balance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>