force-app/main/default/objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>LFID Username</description>
    <inlineHelpText>LFID Username</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>