force-app/main/default/objects/Contact/fields/Visa_Request_Blocklist__c.field-meta.xml
<CustomField>
    <fullName>Visa_Request_Blocklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Request Blocklist</label>
    <type>Checkbox</type>
</CustomField>