force-app/main/default/objects/Contact/fields/Visa_Request_Blocklist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visa_Request_Blocklist_Notes__c</fullName>
    <description>Capture notes around why contact is on blocklist for visa request. Will be pulled to Visa Request custom object</description>
    <label>Visa Request Blocklist Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>