force-app/main/default/objects/Contact/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <formula>IF(
   ISBLANK(Start_Year__c), 
   null,
   YEAR(TODAY()) - VALUE(Start_Year__c)
  )</formula>
    <inlineHelpText>Calculated from the &quot;Start Year (approximate)&quot; field</inlineHelpText>
    <label>Years of Experience (approximate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>