force-app/main/default/objects/Contact/fields/Years_of_Experience_Form__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience_Form__c</fullName>
    <description>This field should NOT be on any page layouts, since this data will get stale.  This field should only be used on forms.  It then populates the &quot;Start Year (approximate)&quot; field with an approximation of the year this person started.</description>
    <label>Years of Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-4 years</fullName>
            </value>
            <value>
                <fullName>5-9 years</fullName>
            </value>
            <value>
                <fullName>10+ years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>