force-app/main/default/objects/Contact/listViews/Akraino_Inbound_Inquiries.listView-meta.xml
<ListView>
    <fullName>Akraino_Inbound_Inquiries</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Akraino Inbound Inquiries</label>
</ListView>