force-app/main/default/objects/Contact/listViews/AP_Stark_and_Wayne.listView-meta.xml
<ListView>
    <fullName>AP_Stark_and_Wayne</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.FIRST_NAME</field>
        <operation>equals</operation>
        <value>AP</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_NAME</field>
        <operation>equals</operation>
        <value>Starkandwayne</value>
    </filters>
    <label>AP - Stark and Wayne</label>
</ListView>