force-app/main/default/objects/Contact/listViews/Blacklist.listView-meta.xml
<ListView>
    <fullName>Blacklist</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TravelFund_Blocklist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TravelFund_Blocklist__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Blacklist</label>
</ListView>