force-app/main/default/objects/Contact/listViews/Contacts_in_Dubai.listView-meta.xml
<ListView>
    <fullName>Contacts_in_Dubai</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_ZIP</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_CITY</field>
        <operation>equals</operation>
        <value>Dubai</value>
    </filters>
    <label>Contacts in Dubai</label>
</ListView>