force-app/main/default/objects/Contact/listViews/Corporate_Contacts.listView-meta.xml
<ListView>
    <fullName>Corporate_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Corporate Contacts</label>
</ListView>