force-app/main/default/objects/Contact/listViews/Hyperledger_APAC_Contacts.listView-meta.xml
<ListView>
    <fullName>Hyperledger_APAC_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>Hyperledger APAC Contacts</label>
</ListView>