force-app/main/default/objects/Contact/listViews/LF_AI_Data_Day_ONNX_Community_Regs.listView-meta.xml
<ListView>
    <fullName>LF_AI_Data_Day_ONNX_Community_Regs</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>LF AI &amp; Data Day - ONNX Community Regs</label>
</ListView>