force-app/main/default/objects/Contact/listViews/LF_Energy_Leads.listView-meta.xml
<ListView>
    <fullName>LF_Energy_Leads</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>LF Energy Lead</label>
</ListView>