force-app/main/default/objects/Contact/listViews/LF_Networking_Campaign_Members.listView-meta.xml
<ListView>
    <fullName>LF_Networking_Campaign_Members</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>LF Networking Campaign Members</label>
</ListView>