force-app/main/default/objects/Contact/listViews/LF_Networking_Q2_outreach.listView-meta.xml
<ListView>
    <fullName>LF_Networking_Q2_outreach</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>LF Networking Q2 Targeted outreah</label>
</ListView>