force-app/main/default/objects/Contact/listViews/LFN_Targeted_Outreach.listView-meta.xml
<ListView>
    <fullName>LFN_Targeted_Outreach</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>LFN Targeted Outreach</label>
</ListView>